# betafits-crm

./: .coveragerc  .env.example  .gitignore  App,tsx  Metadata.json  README.md  TESTING.md  __init__.py  index.html  pyproject.toml  pytest.ini  scrapers.py
Pages/: Dashboard  Interactions  Partners
Services/: geminiService
apps/email_ingestor_server/: README.md  __init__.py  main.py  test_api.py
apps/form5500_ingestion_cli/: main.py
betafits_CRM.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/: Layout
docs/: LG_LOGGING.md
examples/: airtable_logging_demo.py  lg_logging_integration.py
frontend/: README.md  types.ts
frontend/Pages/: Analytics  Companies  ProspectUniverse  Prospects  Targeting
frontend/Services/: mockData
frontend/components/: DashboardCharts
lib/: __init__.py
lib/config/: __init__.py  form5500_config.py  settings.py
lib/integrations/: __init__.py  airtable_client.py  graphiti_client.py  openrouter_client.py  vector_db_client.py
lib/integrations/supabase/: __init__.py  contacts_client.py  emails_client.py  logging_client.py  opportunites_client.py  supabase_client.py
lib/models/: database_schemas.py  form5500_state.py  graph_schemas.py  io_formats.py
lib/prompts/: __init__.py  classifier_prompt.yaml  email_chains.py  entity_extractor_prompt.yaml  loader.py  relation_extractor_prompt.yaml  response_drafter_prompt.yaml
lib/utils/: lg_logging.py  lg_logging_airtable.py  retry.py
scripts/: README.md  __init__.py  check_openai_key.py  classify_historical_emails.py  filter_last_thread_mail.py  init_database.py  test_graphiti_nodes.py
services/enrichment/: __init__.py  company_matcher.py  crunchbase_scraper.py  glassdoor_scraper.py  graph.py  linkedin_scraper.py  supabase_writer.py
services/form5500_legacy/: 5500dataset_upload_to_supabase.py  peo_5500_download_and_attach.py  supabase_bulk_upsert_validating.py  update_dim_prospects_5500.sql  update_dim_prospects_sf.sql
services/form5500_legacy/401k_at_a_glance_reports/: README.md  attach_401k_airtable.py  build_401k_dataset.py  compute_benchmark_ranks.py  generate_and_attach_401k_reports.py  process_401k_dataset.py  requirements.txt
services/form5500_legacy/401k_at_a_glance_reports/legacy_scripts/: README.md  legacy_full_pipeline.py
services/form5500_legacy/401k_at_a_glance_reports/tests_scripts/: README.md  inspect_pdf_fields.py  test_airtable_attachment.py  test_airtable_attachment_regex.py  test_pdf_flattening.py
services/form5500_legacy/airtable_schema_exporter/: README.md  airtable_commissions_schema_export.py
services/form5500_legacy/audit_reports_sync_pipeline/: README.md  update_airtable_audit_report_urls.py
services/form5500_legacy/prospects_5500_matching/: README.md  airtable_5500_match_type_backfill.py  prospects_main_5500_matcher.py  prospects_main_5500_matcher_with_type.py  prospects_sf_2023_matcher.py
services/form5500_legacy/prospects_5500_matching/legacy_scripts/: Script_5500_Matching.py  match_5500.py  match_sf.py
services/form5500_legacy/retirement_benchmarking_etl/: README.md  compute_industry_benchmark_percentiles.py  industry_summary1.json  load_retirement_benchmarking_summary_to_db.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_database.py  test_form5500.py
tests/unit/: __init__.py  test_company.py  test_email.py  test_form5500_config.py  test_form5500_models.py  test_utils.py
tests/workflows/langgraph/enrichment_flow/nodes/: __init__.py
workflows/langgraph/crm_brain/: __init__.py  graph.py  nodes.py
workflows/langgraph/email_drafting/: README.md  __init__.py  graph.py  state.py
workflows/langgraph/email_drafting/nodes/: __init__.py  context_retriever.py  email_drafter.py  workflow_validator.py
workflows/langgraph/email_processing/: README.md  graph.py  state.py
workflows/langgraph/email_processing/nodes/: __init__.py  classifier.py  email_router.py  kg_rag_updater.py  opportunity_matcher.py  workflow_validator.py
workflows/langgraph/enrichment_flow/: __init__.py  graph.py  langgraph.json  nodes.py  state.py
workflows/langgraph/enrichment_flow/nodes/: company_matcher_node.py  crunchbase_discovery_node.py  error_handler_node.py  glassdoor_enrich_node.py  linkedin_enrich_node.py  update_airtable_snapshot_node.py  write_supabase_node.py
workflows/langgraph/form5500_flow/: __init__.py  cli.py  db.py  graph.py
workflows/langgraph/form5500_flow/nodes/: __init__.py  calc.py  ingest.py  script_runner.py
workflows/langgraph/orchestrator/: orchestrator.py
