[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betafits-CRM"
version = "0.1.0"
description = "A complete CRM brain powered by LangGraph, Graphiti, and Supabase."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Betafits Team", email = "admin@betafits.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangGraph and LangChain ecosystem
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.1.0",
    "langgraph-checkpoint>=3.0.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
    # Data validation and serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database and storage
    "supabase[aio]>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Graphiti Knowledge Graph
    "graphiti-core>=0.1.0",
    # HTTP client
    "urllib3>=2.0.0",
    "requests>=2.31.0",
    # Environment management
    "python-dotenv>=1.0.0",
    # Email handling
    "email-validator>=2.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    # CLI
    "click>=8.1.0",
    "typer>=0.9.0",
    # FastAPI server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Web scraping
    "playwright>=1.40.0",
    "seleniumbase>=4.21.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Logging and observability
    "python-json-logger>=2.0.0",
    # Additional utilities
    "python-dateutil>=2.8.0",
    "aiosqlite==0.21.0",
    "postgrest>=2.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
    "responses>=0.24.0",
    "factory-boy>=3.3.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/TeamBetafits/email-ingestor-pipeline"
Documentation = "https://github.com/TeamBetafits/email-ingestor-pipeline/tree/main/docs"
Repository = "https://github.com/TeamBetafits/email-ingestor-pipeline.git"
Issues = "https://github.com/TeamBetafits/email-ingestor-pipeline/issues"

[project.scripts]
betafits-email-pipeline = "apps.email_ingestor_worker.main:main"
betafits-email-server = "apps.email_ingestor_server.main:main"

[tool.setuptools]
packages = ["lib", "apps", "services", "workflows"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["betafits_email_pipeline"]
known_third_party = ["langgraph", "pydantic", "supabase", "graphiti_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true

[[tool.mypy.overrides]]
module = [
    "graphiti_core.*",
    "google.auth.*",
    "google.auth.oauthlib.*",
    "google.auth.transport.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "asyncio: asyncio tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src/betafits_email_pipeline"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
    "^\\s*\\.\\.\\.\\s*$",
]
fail_under = 85
precision = 2

[tool.bandit]
exclude_dirs = ["tests"]
skip = ["B101", "B601"]

[tool.pylint]
max-line-length = 120
disable = [
    "missing-docstring",
    "too-many-arguments",
    "too-many-instance-attributes",
]
